--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+}
+
+.circle {
+  width: 300px;
+  height: 300px;
+  border-radius: 100%;
+  background-color: #2979ff;
+}
+
+.square {
+  width: 300px;
+  height: 300px;
+  background-color: #2979ff;
+}
+
+.shape {
+  margin-top: 20px;
+  width: 200px;
+  height: 40px;
+  background: #4fc3f7;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
   color: white;
+  font-weight: 600;
+  font-size: 20px;
+  transition: 0.3s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+.shape:hover {
+  background: #2979ff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  margin-top: 30px;
 }
